--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,10 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+
+  ],
+  "compilerOptions": {
+    "noEmitOnError": false,
+    "strict": false
+  }
 }
