--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,12 @@
 {
-    "semi": true,
-    "tabWidth": 2,
-    "printWidth": 80,
-    "singleQuote": true,
-    "trailingComma": "all",
-    "jsxBracketSameLine": false,
-    "arrowParens": "always"
-  }
-  
+  "semi": true,
+  "singleQuote": true,
+  "printWidth": 100,
+  "tabWidth": 2,
+  "useTabs": false,
+  "trailingComma": "es5",
+  "bracketSpacing": true,
+  "arrowParens": "avoid",
+  "jsxSingleQuote": false,
+  "endOfLine": "auto"
+}
