--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
     "start": "vite serve"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "@types/react-highlight-words": "^0.20.0",
     "antd": "^5.24.6",
+    "axios": "^1.9.0",
+    "base64url": "^3.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-highlight-words": "^0.21.0",
+    "react-hot-toast": "^2.5.2",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-redux": "^7.1.34",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
