--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "vite serve"
+    "start": "vite serve",
+    "serve":"serve -s dist"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
