--- a/package.json
+++ b/package.json
@@ -9,20 +9,26 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "start": "vite serve",
-    "serve":"serve -s dist"
+    "serve": "serve -s dist"
   },
   "dependencies": {
+    "@ant-design/icons": "5.x",
     "@reduxjs/toolkit": "^2.8.2",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-highlight-words": "^0.20.0",
     "antd": "^5.24.6",
     "axios": "^1.9.0",
     "base64url": "^3.0.1",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^19.0.0",
     "react-highlight-words": "^0.21.0",
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.4.1"
+    "react-router-dom": "^7.4.1",
+    "react-spinners": "^0.17.0",
+    "sass": "^1.89.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
