update common files

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 # VITE_API_URL="https://prod-url.com"
-VITE_API_URL="http://localhost:8080"
+VITE_API_URL="https://shortify-build-four-347748969620.europe-west1.run.app"
