--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
-VITE_API_URL="http://localhost:8080"
+# VITE_API_URL="http://localhost:8081"
+VITE_API_URL="https://shortify-build-four-347748969620.europe-west1.run.app"
