optimize few buttons and new hello request

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,9 @@
 # VITE_API_URL="https://prod-url.com"
 # VITE_API_URL="https://shortify-build-four-347748969620.europe-west1.run.app"
 # VITE_API_URL="http://localhost:8080"
+
+# VITE_API_URL="http://localhost:8080"
+# VITE_OAUTH2_GOOGLE_URL="http://localhost:8080/oauth2/authorization/google"
+
 VITE_API_URL="https://avibit.in"
 VITE_OAUTH2_GOOGLE_URL="https://avibit.in/oauth2/authorization/google"
